# tech-challenge-ml

tech_challenge_ml/: README.md  pyproject.toml
tech_challenge_ml/notebooks/: 01_construcao_do_modelo.ipynb
tech_challenge_ml/src/: api.py
tech_challenge_ml/tests/: test_api.py
