[project]
name = "tech-challenge-ml"
version = "0.1.0"
description = "Projeto de Machine Learning para previsão de Churn"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "scikit-learn==1.2.2",
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "joblib==1.3.2",
    "pydantic==2.6.4"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
